--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "gsap": "^3.12.7",
     "lil-gui": "^0.20.0",
     "three": "^0.173.0",
     "vite": "^6.0.11"
