--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.7",
     "lil-gui": "^0.20.0",
     "three": "^0.173.0",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-plugin-glsl": "^1.3.1"
   }
 }
