--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cannon-es": "^0.20.0",
     "gsap": "^3.12.7",
     "lil-gui": "^0.20.0",
+    "stats.js": "^0.17.0",
     "three": "^0.173.0",
     "three-bvh-csg": "^0.0.16",
     "three-custom-shader-material": "^6.3.1",
